# crawler-demo

./: .gitignore  README.md  deploy.sh  docker-compose-api.yaml  docker-compose-crawler.yaml  docker-compose-server.yaml  docker-compose-stream.yaml  docker-compose-trace.yaml  docker-compose.yaml  run.sh
api/: .env  .env.container  Cargo.toml  Dockerfile  main.rs  telemetry.rs
configs/: .env.api  elasticsearch-sink.json  postgres-source.json  run.sh
configs/connector/: elasticsearch-sink.json
configs/otelcol/: config.yaml
configs/postgresql/: postgres.conf
configs/tempo/: config.yaml
consumer/: .env  .env.container  go.mod  go.sum  main.go  tables.go
crawler/: .env  .env.container  Dockerfile  go.mod  go.sum  main.go
k6/: README.md  loadtest-script.js
migrate/: .env  .env.container  25012024_posts.go  go.mod  go.sum  main.go  tables.go
terraform/ec2/: .terraform.lock.hcl  cloud_config.yaml  main.tf  sg.tf
website/: .env  Dockerfile  nginx.conf  package-lock.json  package.json
website/.github/workflows/: cd.yaml  ci.yaml
website/src/: App.js
website/src/Components/: FeaturedPost.js  Footer.js  Header.js  MainFeaturedPost.js
