[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
elasticsearch = "8.5.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
pretty_env_logger = "0.3.1"
serde_json = "1.0"
dotenv = "0.15.0"

[[bin]]
name = "api"
path = "main.rs"
